# $Id$

pkgname = pets2

include $(top_srcdir)/metlibs.mk

lib_LTLIBRARIES = libpets2.la

libpets2_la_SOURCES = \
	ptAxesElement.cc \
	ptAxisChildElement.cc \
	ptAxisHistogramElement.cc \
	ptBoxElement.cc \
	ptCloudElement.cc \
	ptColor.cc \
	ptDateElement.cc \
	ptDayElement.cc \
	ptDiagram.cc \
	ptDoubleLineElement.cc \
	ptEditLineElement.cc \
	ptFontDefs.cc \
	ptFontManager.cc \
	ptGridlineElement.cc \
	ptHistogramElement.cc \
	ptImage.cc \
	ptIntervalElement.cc \
	ptLayout.cc \
	ptLineElement.cc \
	ptLogoElement.cc \
	ptMarker.cc \
	ptMultiLineElement.cc \
	ptPatterns.cc \
	ptPlotElement.cc \
	ptProgElement.cc \
	ptQBoxElement.cc \
	ptStaticYaxisElement.cc \
	ptStyle.cc \
	ptSymbolElement.cc \
	ptTableElement.cc \
	ptTextElement.cc \
	ptTimemarkerElement.cc \
	ptUTCElement.cc \
	ptVectorElement.cc \
	ptWindVectorElement.cc \
	ptYaxisElement.cc

libpets2_la_CPPFLAGS = \
	${GLP_CPPFLAGS} \
	${GLTEXT_CPPFLAGS} \
	${LOG4CXX_CPPFLAGS} \
	${MILOGGER_CPPFLAGS} \
	${OPENGL_CPPFLAGS} \
	${PARAMETER_CPPFLAGS} \
	${PUDATATYPES_CPPFLAGS} \
	${PUMET_CPPFLAGS} \
	${PUCTOOLS_CPPFLAGS} \
	${PUTOOLS_CPPFLAGS} \
	${TSDATA_CPPFLAGS}

libpets2_la_LDFLAGS = \
	${VERSION_INFO} \
	${GLP_LDFLAGS} \
	${GLTEXT_LDFLAGS} \
	${LOG4CXX_LDFLAGS} \
	${MILOGGER_LDFLAGS} \
	${OPENGL_LDFLAGS} \
	${PARAMETER_LDFLAGS} \
	${PUDATATYPES_LDFLAGS} \
	${PUMET_LDFLAGS} \
	${PUCTOOLS_LDFLAGS} \
	${PUTOOLS_LDFLAGS} \
	${TSDATA_LDFLAGS}

libpets2_la_LIBADD = \
	${GLP_LIBS} \
	${GLTEXT_LIBS} \
	${LOG4CXX_LIBS} \
	${MILOGGER_LIBS} \
	${OPENGL_LIBS} \
	${PARAMETER_LIBS} \
	${PUDATATYPES_LIBS} \
	${PUMET_LIBS} \
	${PUCTOOLS_LIBS} \
	${PUTOOLS_LIBS} \
	${TSDATA_LIBS}

pkg_includedir = ${includedir}/pets2

pkg_include_HEADERS = \
	polyStipMasks.h \
	ptAxesElement.h \
	ptAxisHistogramElement.h \
	ptBoxElement.h \
	ptCloudElement.h \
	ptColor.h \
	ptDateElement.h \
	ptDayElement.h \
	ptDiagram.h \
	ptDoubleLineElement.h \
	ptEditLineElement.h \
	ptEditModes.h \
	ptFontDefs.h \
	ptFontManager.h \
	ptGlobals.h \
	ptGridlineElement.h \
	ptHistogramElement.h \
	ptImage.h \
	ptImagePlot.h \
	ptIntervalElement.h \
	ptLayout.h \
	ptLineElement.h \
	ptLogoElement.h \
	ptMarker.h \
	ptMultiLineElement.h \
	ptParameterRelation.h \
	ptPatterns.h \
	ptPlotElement.h \
	ptProgElement.h \
	ptQBoxElement.h \
	ptStyle.h \
	ptStyleOrder.h \
	ptSymbolElement.h \
	ptTableElement.h \
	ptTextElement.h \
	ptTimemarkerElement.h \
	ptUTCElement.h \
	ptVectorElement.h \
	ptWindVectorElement.h \
	ptXAxisInfo.h \
	ptYaxisElement.h

