pkg_includedir = ${prefix}/include/${PACKAGE_NAME}

pkg_include_HEADERS = \
polyStipMasks.h \
ptAxesElement.h \
ptAxisHistogramElement.h \
ptBoxElement.h \
ptCloudElement.h \
ptColor.h \
ptDateElement.h \
ptDayElement.h \
ptDiagram.h \
ptDoubleLineElement.h \
ptEditLineElement.h \
ptEditModes.h \
ptFontColl.h \
ptFontDefs.h \
ptFontManager.h \
ptGlobals.h \
ptGridlineElement.h \
ptHistogramElement.h \
ptImage.h \
ptImagePlot.h \
ptIntervalElement.h \
ptLayout.h \
ptLineElement.h \
ptLogoElement.h \
ptMarker.h \
ptMultiLineElement.h \
ptParameterRelation.h \
ptPatterns.h \
ptPlotElement.h \
ptProgElement.h \
ptQBoxElement.h \
ptStyle.h \
ptStyleOrder.h \
ptSymbolElement.h \
ptTableElement.h \
ptTextElement.h \
ptTimemarkerElement.h \
ptUTCElement.h \
ptVectorElement.h \
ptWindVectorElement.h \
ptXAxisInfo.h \
ptYaxisElement.h


INSTALL=install -p # tells install to preserve timestamp
